# sentence-transformers

./: .pre-commit-config.yaml  README.md  index.rst  pyproject.toml
.github/workflows/: quality.yml  tests.yml
docs/: conf.py  installation.md  publications.md
docs/_static/js/: custom.js
docs/_templates/: layout.html
docs/cross_encoder/: loss_overview.md  pretrained_models.md  training_overview.md
docs/package_reference/sentence_transformer/: losses.md
docs/pretrained-models/: dpr.md  msmarco-v5.md  nli-models.md  sts-models.md
docs/sentence_transformer/: loss_overview.md  pretrained_models.md  training_overview.md
docs/sentence_transformer/training/: examples.rst
docs/sentence_transformer/usage/: custom_models.rst
docs/sparse_encoder/: loss_overview.md  training_overview.md
examples/cross_encoder/applications/: README.md
sentence_transformers/: __init__.py  data_collator.py  sampler.py  test.ipynb  trainer.py  training_args.py
sentence_transformers/cross_encoder/: CrossEncoder.py  CustomCrossEncoder.py  PrerankerTrainer.py  test.ipynb  tokenizer.ipynb
sentence_transformers/datasets/: ParallelSentencesDataset.py
sentence_transformers/evaluation/: InformationRetrievalEvaluator.py  NanoBEIREvaluator.py
sentence_transformers/losses/: AdaptiveLayerLoss.py  AnglELoss.py  CachedGISTEmbedLoss.py  CachedMultipleNegativesRankingLoss.py  CachedMultipleNegativesSymmetricRankingLoss.py  ContrastiveLoss.py  ContrastiveTensionLoss.py  DenoisingAutoEncoderLoss.py  EmbedDistillLoss.py  GISTEmbedLoss.py  GlobalOrthogonalRegularizationLoss.py  MultipleNegativesRankingLoss.py  MultipleNegativesSymmetricRankingLoss.py  SoftmaxLoss.py  TripletLoss.py  __init__.py
sentence_transformers/models/: Pooling.py  Transformer.py
sentence_transformers/util/: file_io.py  hard_negatives.py  similarity.py
tests/: conftest.py  test_backends.py  test_cmnrl.py  test_custom_models.py  test_pretrained_stsb.py  test_sentence_transformer.py  test_train_stsb.py  test_trainer.py  test_training_args.py  utils.py
tests/cross_encoder/: conftest.py  test_backends.py  test_cross_encoder.py  test_model_card.py  test_multi_process.py  test_pretrained.py  test_train_stsb.py  test_trainer.py
tests/evaluation/: test_label_accuracy_evaluator.py  test_nanobeir_evaluator.py
tests/models/: test_pooling.py  test_static_embedding.py  test_transformer.py
tests/samplers/: test_group_by_label_batch_sampler.py  test_no_duplicates_batch_sampler.py  test_round_robin_batch_sampler.py
tests/sparse_encoder/: conftest.py  test_backends.py  test_model_card.py  test_opensearch_models.py  test_pretrained.py  test_sparse_encoder.py  test_train_stsb.py  test_trainer.py
tests/util/: test_hard_negatives.py  test_similarity.py
(+107 files in other folders)
